--- a/vtcode.html
+++ b/vtcode.html
@@ -75,7 +75,7 @@
 
 								<section>
 									<a href="generic.html" class="image">
-										<img src="stream.jpg" alt="" data-position="top center" />
+										<img src="stream2.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -92,7 +92,7 @@
 
 								<section>
 									<a href="generic.html" class="image">
-										<img src="stream-.jpg" alt="" data-position="25% 25%" />
+										<img src="stream2.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
